--- a/.github/actions/test-ocp/action.yml
+++ b/.github/actions/test-ocp/action.yml
@@ -7,9 +7,6 @@ inputs:
   python-version:
     description: "Python version to use for the build"
     required: true
-  sed-i:
-    description: "Sed in-place command for the OS"
-    required: true
   use-vtk:
     description: "Whether to use VTK in the build"
     required: true
@@ -22,7 +19,7 @@ runs:
     # - - -
 
     - name: (Linux) Install ca-certificates
-      if: env.PYWRAP == 'true' && runner.os == 'Linux' && steps.cache-ocp-source-restore.outputs.cache-hit != 'true'
+      if: env.PYWRAP == 'true' && runner.os == 'Linux'
       shell: bash -l {0}
       run: |
         # (Linux) Install ca-certificates
@@ -33,23 +30,12 @@ runs:
         sudo apt-get update -qq  
         sudo DEBIAN_FRONTEND=noninteractive apt-get install -qq ca-certificates > /dev/null 2>&1
 
-    - name: (Mac) Install dependencies
-      if: runner.os == 'macOS'
-      shell: bash -l {0}
-      run: |
-        # (Mac) Install dependencies
-        set -e
-        set -o pipefail
-
-        brew install gsed
-
     # - - -
 
     - name: (All) Patch environment.yml for Python
-      if: steps.cache-occt-restore.outputs.cache-hit != 'true'
       shell: bash -l {0}
       run: |
-        ${{ inputs.sed-i }} 's/python=3.13/python=${{ inputs.python-version }}/' environment.yml
+        sed -i.bak 's/python=3.13/python=${{ inputs.python-version }}/' environment.yml
 
     - name: Set up Python ${{ inputs.python-version }} via micromamba
       uses: mamba-org/setup-micromamba@v2
@@ -73,35 +59,6 @@ runs:
         micromamba create -y -n test python=${{ inputs.python-version }}
         micromamba activate test
         pip install pytest docutils ipython
-
-        if [[ "$RUNNER_OS" == "macOS" ]]; then
-          brew install gsed
-        fi
-
-    # - - -
-
-    # - name: Download wheel artifact
-    #   if: inputs.python-version == '3.13' && inputs.use-vtk == 'vtk'
-    #   shell: bash -l {0}
-    #   run: |
-    #     if [[ "${{ inputs.os }}" == "macos-15" ]]; then
-    #       echo "Downloading cadquery_vtk-${{ env.VTK }}-cp313-cp313-macosx_11_0_arm64.whl"
-    #       curl -L -O ${{ env.VTK313_URL }}/cadquery_vtk-${{ env.VTK }}-cp313-cp313-macosx_11_0_arm64.whl
-
-    #     elif [[ "${{ inputs.os }}" == "macos-13" ]]; then
-    #       echo "Downloading cadquery_vtk-9.3.1-cp313-cp313-macosx_11_0_x86_64.whl"
-    #       curl -L -O ${{ env.VTK313_URL }}/cadquery_vtk-${{ env.VTK }}-cp313-cp313-macosx_11_0_x86_64.whl
-
-    #     elif [[ "${{ inputs.os }}" == "ubuntu-22.04" ]]; then
-    #       echo "Downloading cadquery_vtk-9.3.1-cp313-cp313-linux_x86_64.whl"
-    #       curl -L -O ${{ env.VTK313_URL }}/cadquery_vtk-${{ env.VTK }}-cp313-cp313-linux_x86_64.whl
-
-    #     else 
-    #       echo "Downloading cadquery_vtk-9.3.1-cp313-cp313-win_amd64.whl"
-    #       curl -L -O ${{ env.VTK313_URL }}/cadquery_vtk-${{ env.VTK }}-cp313-cp313-win_amd64.whl
-
-    #     fi
-    #     ls -l
 
     # - - -
     
@@ -162,22 +119,22 @@ runs:
         pip install --no-deps ocpsvg svgelements
         
         # Patch to remove dependency ocp_svg, since it relies on cadquery_ocp 7.8
-        ${{ inputs.sed-i }} '/ocpsvg/d' pyproject.toml
+        sed -i.bak '/ocpsvg/d' pyproject.toml
         
         # Patch to allow cadquery_ocp v7.9
         if [[ "${{ inputs.use-vtk }}" == "novtk" ]]; then
-          ${{ inputs.sed-i }} 's/"cadquery-ocp >= 7\.8, < 7\.9",/"cadquery-ocp-novtk >= 7.9, < 8.0",/' pyproject.toml
+          sed -i.bak 's/"cadquery-ocp >= 7\.8, < 7\.9",/"cadquery-ocp-novtk >= 7.9, < 8.0",/' pyproject.toml
         else
-          ${{ inputs.sed-i }} 's/"cadquery-ocp >= 7\.8, < 7\.9",/"cadquery-ocp >= 7.9, < 8.0",/' pyproject.toml
+          sed -i.bak 's/"cadquery-ocp >= 7\.8, < 7\.9",/"cadquery-ocp >= 7.9, < 8.0",/' pyproject.toml
         fi
 
         # install build123d without ocp_svg dependency (since it is already installed)
         pip install .
 
         # 7.9.1. COMPATIBILITY ISSUE
-        ${{ inputs.sed-i }} '/def test_export_step_timestamp_datetime/i\    @pytest.mark.skip()' tests/test_exporters3d.py
-        ${{ inputs.sed-i }} '/def test_export_step_timestamp_str/i\    @pytest.mark.skip()' tests/test_exporters3d.py
-        # ${{ inputs.sed-i }} '/^class ImportSVG(unittest\.TestCase):/a\    __test__ = False' tests/test_importers.py
+        sed -i.bak '/def test_export_step_timestamp_datetime/i\    @pytest.mark.skip()' tests/test_exporters3d.py
+        sed -i.bak '/def test_export_step_timestamp_str/i\    @pytest.mark.skip()' tests/test_exporters3d.py
+        # sed -i.bak '/^class ImportSVG(unittest\.TestCase):/a\    __test__ = False' tests/test_importers.py
 
         if [[ "${{ inputs.use-vtk }}" == "novtk" ]]; then
           pytest tests -v -W ignore \
@@ -203,7 +160,7 @@ runs:
         cd cadquery
 
         # Patch to allow cadquery_ocp v7.9
-        ${{ inputs.sed-i }} 's/"cadquery-ocp>=7\.8\.1,<7\.9",/"cadquery-ocp>=7.9,< 8.0",/' setup.py
+        sed -i.bak 's/"cadquery-ocp>=7\.8\.1,<7\.9",/"cadquery-ocp>=7.9,< 8.0",/' setup.py
 
         # if [[ "${{ inputs.python-version }}" == "3.13" ]]; then
         #   patch -p1 < ../patches/cadquery.patch
@@ -212,8 +169,8 @@ runs:
         micromamba activate test
 
         # 7.9.1. COMPATIBILITY ISSUE
-        ${{ inputs.sed-i }} '/^from pytest import /s/$/, mark/' tests/test_free_functions.py
-        ${{ inputs.sed-i }} '/def test_cap/i @mark.skip()' tests/test_free_functions.py
+        sed -i.bak '/^from pytest import /s/$/, mark/' tests/test_free_functions.py
+        sed -i.bak '/def test_cap/i @mark.skip()' tests/test_free_functions.py
         # workaround for nlopt 2.9.0 not available for Intel Mac
         # if [[ "${{ inputs.os }}" == "macos-13" ]]; then
         #   micromamba install -y nlopt=2.9
