--- a/.github/actions/test-ocp/action.yml
+++ b/.github/actions/test-ocp/action.yml
@@ -32,7 +32,7 @@ runs:
     - name: Install tomli on Python 3.10
       shell: bash -l {0}
       if: ${{ matrix.python-version == '3.10' }}
-      run: uv pip install "tomli>=1.1.0" packaging
+      run: uv pip install "tomli>=1.1.0"
 
     # - - -
     
@@ -64,7 +64,7 @@ runs:
         fi
         ls -l
         uv pip install *.whl
-        
+
         uv pip list
 
         uv run python -c "import OCP; print('Success: OCP', OCP.__version__)"
@@ -77,6 +77,8 @@ runs:
         # Run build123d tests
         set -e
         set -o pipefail
+
+        uv pip install packaging
 
         git clone https://github.com/gumyr/build123d.git
         ocpsvg_min=$(uv run python get-min-version.py build123d/pyproject.toml ocpsvg)
