--- a/.github/actions/test-ocp/action.yml
+++ b/.github/actions/test-ocp/action.yml
@@ -83,7 +83,9 @@ runs:
         git clone https://github.com/gumyr/build123d.git
         ocpsvg_min=$(uv run python get-min-version.py build123d/pyproject.toml ocpsvg)
         ocp_gordon_min=$(uv run python get-min-version.py build123d/pyproject.toml ocp_gordon)
+        echo "=> ocpsvg $ocpsvg_min / ocp_gordon v$ocp_gordon_min"
 
+        echo "=> Patching and installing ocpsvg"
         git clone https://github.com/snoyer/ocpsvg.git
         cd ocpsvg
         git checkout -b $ocpsvg_min
@@ -96,6 +98,7 @@ runs:
         uv pip install .
         cd ..
 
+        echo "=> Patching and installing ocp_gordon"
         git clone https://github.com/gongfan99/ocp_gordon.git
         cd ocp_gordon
         git checkout -b v$ocp_gordon_min
@@ -108,6 +111,7 @@ runs:
         uv pip install .
         cd ..
 
+        echo "=> Patching and installing build123"
         cd build123d
         # Patch to allow cadquery_ocp v7.9
         if [[ "${{ inputs.use-vtk }}" == "novtk" ]]; then
@@ -117,6 +121,7 @@ runs:
         fi
         uv pip install .
 
+        echo "=> Installed packages for test"
         uv pip list
 
         # 7.9.1. COMPATIBILITY ISSUE
@@ -125,11 +130,13 @@ runs:
         # sed -i.bak '/^class ImportSVG(unittest\.TestCase):/a\    __test__ = False' tests/test_importers.py
 
         if [[ "${{ inputs.use-vtk }}" == "novtk" ]]; then
+          echo "=> Running novtk tests"
           uv run pytest tests -v -W ignore \
                  --ignore tests/test_direct_api/test_vtk_poly_data.py \
                  --ignore tests/test_direct_api/test_jupyter.py \
                  --ignore tests/test_examples.py  # 7.9.1. COMPATIBILITY ISSUE
         else
+          echo "=> Running vtk tests"
           uv run pytest tests -v -W ignore \
                  --ignore tests/test_examples.py  # 7.9.1. COMPATIBILITY ISSUE
         fi
