--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -157,6 +157,12 @@ jobs:
         # python-version: ["3.10", "3.11", "3.12", "3.13"]
         python-version: ["3.13"]
         use-vtk: ["vtk", "novtk"]
+        include:
+          - os: "ubuntu-22.04"
+            plat: manylinux_2_31_x86_64
+          - os: "ubuntu-22.04-arm"
+            plat: manylinux_2_31_aarch64
+
     steps:
       - uses: actions/checkout@v4
       - name: Build OCP
@@ -168,7 +174,7 @@ jobs:
           use-vtk: ${{ matrix.use-vtk }}
           shells: "bash"
           delocate: auditwheel patchelf
-          plat: manylinux_2_31_x86_64
+          plat: ${{ matrix.plat }}
           module: "OCP.*.so"
           env: "DUMMY=0"
           ocp-source-tag: "ubuntu-22.04"
